# remote-field

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
apps/bloom_2d/: Cargo.toml
apps/bloom_2d/src/: lib.rs
apps/mesh_2d/: Cargo.toml
apps/mesh_2d/src/: lib.rs  state.rs
apps/mesh_2d/src/model/: board.rs  tags.rs
apps/mesh_2d/src/systems/: mod.rs  update_colours.rs
apps/mesh_2d/tests/: entries.rs
apps/mesh_2d/tests/model/: board.rs  entity.rs  float64_value.rs
apps/mesh_2d/tests/utils/: color.rs
apps/mesh_2d/web_admin/: 404.html  bun.lockb  index.html  package.json  style_guide.html  vite.config.ts
apps/mesh_2d/web_admin/public/assets/css/: font.css  reset.css
apps/mesh_2d/web_admin/src/: main.ts  style.css
apps/mesh_2d/web_admin/src/templates/: footer.njk  header.njk  main.njk
apps/renderer/: Cargo.toml
apps/renderer/src/: lib.rs
apps/renderer/src/model/: entity.rs  float64_value.rs  mod.rs  tags.rs
apps/renderer/src/systems/: events_listeners.rs  update_colours.rs
apps/renderer/src/utils/: color.rs
apps/renderer/tests/model/: board.rs  entity.rs  float64_value.rs  mod.rs
apps/renderer/tests/utils/: color.rs
common/: Cargo.toml
entrypoint/: Cargo.toml
entrypoint/src/: cli.rs  main.rs
perspectives/: lib_example_socket_and_http_communication.rs
