[workspace]
resolver = "2"
members = [
    "common",
    "apps/mesh_2d",
    "apps/renderer",
    "entrypoint",
]

#  Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
